--- a/index.html
+++ b/index.html
@@ -1,103 +1,122 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Liens</title>
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        background: linear-gradient(110deg, #f93d66, #6d47d9);
-        overflow: hidden;
-      }
-      .liens {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Liens</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <style>
+    body {
+      background: linear-gradient(110deg, #f93d66, #6d47d9);
+      overflow: hidden;
+    }
+
+    .liens {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .lien {
+      cursor: pointer;
+      min-width: 300px;
+      padding: 30px;
+      margin: 30px 40px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+        "Segoe UI Symbol";
+      background-color: #ffc600;
+      text-align: center;
+      transition: all 0.5s;
+    }
+
+    .lien:hover a {
+      color: white;
+      font-weight: bold;
+      font-size: large;
+      font-family: "Courier New", Courier, monospace;
+    }
+
+    .lien:hover {
+      color: whitesmoke !important;
+      background-color: rgba(134, 111, 10, 0);
+    }
+
+    a {
+      transition: all 0.5s;
+      text-decoration: none;
+      text-transform: uppercase;
+      color: black;
+    }
+
+    a:active,
+    a:focus {
+      text-decoration: none;
+    }
+
+    #palette {
+      color: whitesmoke;
+      position: absolute;
+      bottom: 50px;
+      left: 47%;
+      cursor: pointer;
+      text-align: center;
+      font-weight: bold;
+    }
+
+    #palette>p {
+      transform: translateY(-10px);
+      animation: upAndDown 1s infinite;
+    }
+
+    @keyframes upAndDown {
+      0% {
+        opacity: 0;
       }
 
-      .lien {
-        cursor: pointer;
-        min-width: 300px;
-        padding: 30px;
-        margin: 30px 40px;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-          "Segoe UI Symbol";
-        background-color: #ffc600;
-        text-align: center;
-        transition: all 0.5s;
+      100% {
+        opacity: 1;
+        transform: translateY(10px)
       }
+    }
+  </style>
+</head>
 
-      .lien:hover a {
-        color: white;
-        font-weight: bold;
-        font-size: large;
-        font-family: "Courier New", Courier, monospace;
-      }
-
-      .lien:hover {
-        color: whitesmoke !important;
-        background-color: rgba(134, 111, 10, 0);
-      }
-
-      a {
-        transition: all 0.5s;
-        text-decoration: none;
-        text-transform: uppercase;
-        color: black;
-      }
-
-      a:active,
-      a:focus {
-        text-decoration: none;
-      }
-
-      #palette {
-        color: whitesmoke;
-        position: absolute;
-        bottom: 50px;
-        left: 47%;
-        cursor: pointer;
-      }
-    </style>
-  </head>
-
-  <body>
-    <div class="liens">
-      <div class="lien"><a href="./tp-siteweb/">TP Site Web</a></div>
-      <div class="lien"><a href="./tp-siteweb/">TP Site Web Original</a></div>
-      <div class="lien">
-        <a href="./squelette.html">Squelette d'une Page Html</a>
-      </div>
-      <div class="lien"><a href="./programme.html">Programme</a></div>
+<body>
+  <div class="liens">
+    <div class="lien"><a href="./tp-siteweb/">TP Site Web</a></div>
+    <div class="lien"><a href="./tp-siteweb/">TP Site Web Original</a></div>
+    <div class="lien">
+      <a href="./squelette.html">Squelette d'une Page Html</a>
     </div>
+    <div class="lien"><a href="./programme.html">Programme</a></div>
+  </div>
 
-    <div id="palette">
-      <span class="material-icons"> palette </span>
-    </div>
-  </body>
+  <div id="palette">
+    <p>Clique Ici 👎</p>
+    <span class="material-icons"> palette </span>
+  </div>
+</body>
 
-  <script>
-    let getRandomColor = () => {
-      let letters = "0123456789ABCDEF";
-      let color = "#";
-      for (let i = 0; i < 6; i++) {
-        color += letters[Math.floor(Math.random() * 16)];
-      }
-      return color;
-    };
+<script>
+  let getRandomColor = () => {
+    let letters = "0123456789ABCDEF";
+    let color = "#";
+    for (let i = 0; i < 6; i++) {
+      color += letters[Math.floor(Math.random() * 16)];
+    }
+    return color;
+  };
 
-    let palette = document.querySelector("#palette");
-    palette.onclick = () => {
-      let colorGen = getRandomColor();
-      let colorGen2 = getRandomColor();
-      document.querySelector(
-        "body"
-      ).style.background = `linear-gradient(110deg, ${colorGen}, ${colorGen2})`;
-    };
-  </script>
+  let palette = document.querySelector("#palette");
+  palette.onclick = () => {
+    let colorGen = getRandomColor();
+    let colorGen2 = getRandomColor();
+    document.querySelector(
+      "body"
+    ).style.background = `linear-gradient(110deg, ${colorGen}, ${colorGen2})`;
+  };
+</script>
+
 </html>
